# guru_ai_psych

./: .env  .gitignore  README.md  dialog.py  gradio_app.py  knowledge_base.py  pyproject.toml  settings.py  telegram_bot.py
knowledge_data/: problem_knowledge.py
llm/: __init__.py  bothub_client.py
prompts/: __init__.py  base_system.mustache  block_hypothesis_listing.mustache  classify_scenario.mustache  default_classify_reply.mustache  ended_message.mustache  fallback_classify_note.mustache  fallback_classify_reply.mustache  finalize_intro_flags.mustache  greeting.mustache  human_classify.mustache  human_return_json.mustache  intro_stage_1.mustache  intro_stage_2.mustache  intro_stage_3.mustache  intro_stage_4.mustache  intro_stage_5.mustache  intro_step5_litmus_append.mustache  intro_step5_multihyp_append.mustache  litmus_question_fallback.mustache  llm_extract_intro_meta.mustache  llm_generate_litmus.mustache  llm_pick_problem_no_hits.mustache  llm_tie_break_problem.mustache  loader.py  scenario_1.mustache  scenario_2.mustache  scenario_3.mustache  scenario_system.mustache  style_constraints.mustache  work_mode_default.mustache  work_mode_sc3.mustache
