[project]
name = "guru-ai-psycho"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["guru_ai_psycho"]

