[project]
name = "guru-ai-psycho"
version = "0.1.0"
description = ""
requires-python = ">=3.13.12, <3.14"
dependencies = [
    "pystache>=0.6.5",
    "gradio>=6.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "python-telegram-bot>=22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["guru_ai_psycho"]

